tests/src/frontend/typechecking/invalid/typeclass_extend.sk
trait X
class Y extends X
